# edc

./: Dockerfile  README.md  balanced_datasets.py  collect_schema_retrieval_data.py  dataset2edc.py  print_score_table.py  pyproject.toml  requirements.txt  retimestamped_dataset.py  run_all.sh  run_all_baseline.sh  run_baseline.py  run_baseline.sh  run_edc.sh  score_all.sh  score_all_baseline.sh  score_baseline.sh  score_edc.sh  scratch.org  significance_tests.py  subdataset.py  webnlg_eval_quads.org
dsets/: yago2022-small.txt  yago2022.txt  yago2022:balanced-yago2026.txt  yago2022:balanced-yago2026:retimestamped-2026.txt  yago2022_multi-small.txt  yago2022_multi.txt  yago2022_multi:balanced-yago2026_multi.txt  yago2022_multi:balanced-yago2026_multi:retimestamped-2026.txt  yago2026-mini.txt  yago2026-small.txt  yago2026.txt  yago2026:balanced-yago2022.txt  yago2026:balanced-yago2022:retimestamped-2022.txt  yago2026_multi-small.txt  yago2026_multi.txt  yago2026_multi:balanced-yago2022_multi.txt  yago2026_multi:balanced-yago2022_multi:retimestamped-2022.txt
edc/: edc_framework.py  entity_extraction.py  extract.py  schema_canonicalization.py  schema_definition.py  schema_retriever.py
edc/utils/: llm_utils.py
evaluate/: archive.py  evaluation_script.py  scratch.py
evaluate/references/: yago2022-small.txt  (+16 more)
prompt_templates/: cie_template.txt  oie_r_template.txt  oie_template.txt  sc_template.txt  sd_template.txt
schemas/: yago2022-small_schema.csv  yago2026_mini.csv  yago2026_schema.csv
tests/: test_balanced_datasets.py  test_evaluaterefcand.py  test_llm_utils.py
(+6 files in other folders)
