[project]
name = "edc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.78.1",
    "sentence-transformers>=2.2.2",
    "torch>=1.13.1",
    "transformers>=4.30.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.79.4",
    "pytest>=7.4.4",
]
