[project]
name = "edc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=4.0.0",
    "lxml>=6.0.0",
    "nervaluate==0.1.7",
    "nltk>=3.9.1",
    "openai>=1.97.0",
    "peft>=0.16.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=5.0.0",
    "transformers==4.51.3",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.79.4",
    "pytest>=7.4.4",
]
